# quintal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  index.html  package-lock.json  tailwind.config.js  test_python.py
.github/workflows/: github-page-deploy-main.yml  main.yml  static.yml
app/: CMakeLists.txt  camera_analysis.cpp  camera_streamer.cpp  camera_streamer.hpp  echo_handler.hpp  main.cpp  udp_sink_server.hpp  webrtc_server.cpp  webrtc_server.hpp  ws_client.cpp  ws_client.hpp
backend/: Dockerfile  generate_token.js  package-lock.json  package.json  signaling-server.js
dev-logs/: 2023-04-13.md
device/: CMakeLists.txt  toolchain.cmake  toolchain_aarch64.cmake  toolchain_armhf.cmake
device/app/: CMakeLists.txt  camera_frame_queue.hpp  main.cpp  webrtc_server.cpp  webrtc_server.hpp
device/app/vehicule_remote_control/: CMakeLists.txt  camera_analysis.hpp  main.cpp
device/example/: CMakeLists.txt
device/example/firmata/: CMakeLists.txt  main.cpp
device/example/gstreamercv/: main.cpp
device/example/webrtc_send/: CMakeLists.txt  index.html  main.cpp
device/firmata/: CMakeLists.txt
device/lib/: CMakeLists.txt
device/lib/analysis/: CMakeLists.txt
device/lib/analysis/includes/: video_analysis.hpp
device/lib/analysis/src/: video_analysis.cpp
device/lib/firmata/: CMakeLists.txt
device/lib/firmata/includes/: firmata_client.hpp
device/lib/firmata/src/: firmata_client.cpp
device/lib/quintal_proto/: CMakeLists.txt
device/lib/utils/: CMakeLists.txt
device/lib/utils/includes/: file_manager.hpp  protobuf_message_sender.hpp
device/lib/vehicule/: CMakeLists.txt
device/lib/vehicule/includes/: car.hpp  car_builder.hpp  iot_control.hpp  motor.hpp  part.hpp  switchgroup.hpp
device/lib/vehicule/src/: car_builder.cpp  dc_car.cpp  firmata_iot_control.cpp  motor.cpp
device/lib/video_analysis/: CMakeLists.txt
device/lib/video_analysis/includes/: video_analysis.hpp
device/lib/video_analysis/src/: video_analysis.cpp
device/lib/webrtc_server/: CMakeLists.txt
device/lib/webrtc_server/includes/: camera_streamer.hpp  dc_protobuf_sender.hpp  udp_sink_server.hpp  webrtc_server.hpp
device/lib/webrtc_server/src/: camera_streamer.cpp  dc_protobuf_sender.cpp  webrtc_server.cpp
docker/: build_docker.sh  bundle.sh  crossbuild.Dockerfile  crossbuild.sh  docker-compose.yml  pibuild.Dockerfile  push_docker.sh  source.list  toolchain_armhf.cmake  update_prerelease.sh
example/: CMakeLists.txt
example/firmata/: CMakeLists.txt  main.cpp
example/gstreamercv/: CMakeLists.txt  main.cpp
example/webrtc_send/: index.html  main.cpp  signaling-server.py
helm/: Chart.yaml  deploy.sh
helm/templates/: coturn-deployment.yaml  coturn-service.yaml  ingress.yaml  signaling-server-deployment.yaml  signaling-server-service.yaml  ui-deployment.yaml  ui-service.yaml
libcontrol/: CMakeLists.txt
libcontrol/include/: quintal.h
libfirmata/: CMakeLists.txt
libfirmata/include/: firmata.hpp  firmata_client.hpp  serialport.hpp
libfirmata/src/: serialport.cpp
libutils/: chrono.h  definition.h  log.h
proto/: CMakeLists.txt  config.proto  control.proto  msg_header.proto  video_analysis.proto
scripts/: build.sh  configure-rasbian.sh  dockerize.sh
src/: components.js  global.js
ui/: Dockerfile  angular.json  index.html  nginx.conf  package-lock.json  package.json
ui/src/: components.js  controller.js  global.js  index.html
ui/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
ui/src/app/components/device-control/: device-control.component.html  device-control.component.scss  device-control.component.ts
ui/src/app/pages/devices-selection/: devices-selection.component.html  devices-selection.component.spec.ts  devices-selection.component.ts
ui/src/app/proto/: config.ts  control.ts  index.ts  msg_header.ts  video_analysis.ts
ui/src/app/proto/google/protobuf/: timestamp.ts
ui/src/app/services/: Signaling.service.ts  config.service.ts  control-channel.service.ts  peer-connction.service.spec.ts  peer-connction.service.ts  signaling.service.ts
